force-app/main/default/objects/Base_Rate_Variant__c.object
<CustomObject>
    <description>Represents tiered base rates available for the plan family by variant code</description>
    <fields>
        <fullName>Base_Rate_Schedule__c</fullName>
        <label>Base Rate Schedule</label>
        <referenceTo>Base_Rate_Schedule__c</referenceTo>
        <relationshipLabel>Base Rate Variants</relationshipLabel>
        <relationshipName>Base_Rate_Variants</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Policy_Form__c</fullName>
        <label>Policy Form</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Subscriber_And_Child__c</fullName>
        <label>Subscriber And Child</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Subscriber_And_Children__c</fullName>
        <label>Subscriber And Children</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Subscriber_And_Family__c</fullName>
        <label>Subscriber And Family</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Subscriber_And_Spouse__c</fullName>
        <label>Subscriber And Spouse</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Subscriber__c</fullName>
        <label>Subscriber</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Tier_Code__c</fullName>
        <formula>TEXT(Base_Rate_Schedule__r.Tier_Code__c)</formula>
        <label>Tier Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Variant_Code__c</fullName>
        <externalId>true</externalId>
        <label>Variant Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Variant_Description__c</fullName>
        <label>Variant Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Base Rate Variant</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Variant_Code__c</columns>
        <columns>Policy_Form__c</columns>
        <columns>Variant_Description__c</columns>
        <columns>Subscriber__c</columns>
        <columns>Subscriber_And_Spouse__c</columns>
        <columns>Subscriber_And_Family__c</columns>
        <columns>Subscriber_And_Child__c</columns>
        <columns>Subscriber_And_Children__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Records</label>
    </listViews>
    <nameField>
        <displayFormat>RS-{000000000}</displayFormat>
        <label>Rate Schedule Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Base Rate Variants</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>