force-app/main/default/objects/Base_Rate_Variant__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Variant_Code__c</columns>
    <columns>Policy_Form__c</columns>
    <columns>Variant_Description__c</columns>
    <columns>Subscriber__c</columns>
    <columns>Subscriber_And_Spouse__c</columns>
    <columns>Subscriber_And_Family__c</columns>
    <columns>Subscriber_And_Child__c</columns>
    <columns>Subscriber_And_Children__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Records</label>
</ListView>